force-app/main/default/objects/SDO_B2BCommerce_Tier_Voucher_Rule__c.object
<CustomObject>
    <description>What: Tier Voucher rule for Rebate Management. Who: Ve Bui. When: Sept, 2021.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tier_Name__c</fullName>
        <label>Tier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voucher Definition</label>
        <referenceTo>VoucherDefinition</referenceTo>
        <relationshipLabel>Tier Voucher Rules</relationshipLabel>
        <relationshipName>Tier_Voucher_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tier Voucher Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tier Voucher Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tier Voucher Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>